# valid

./: .gitignore  README.md  deploy.py  orchestrator.py  package-lock.json  package.json  pyproject.toml  registry.py  requirements.txt  tsconfig.json  validation_tools_server.py
daemon/: .gitignore  go.mod  main.go
daemon/audit/: audit.go
daemon/plugins/: exec.go  mcp.go  plugin.go
daemon/policy/: match.go  policy.go  policy_test.go
e2e/e2b/: README.md  deploy.py  e2b.Dockerfile  e2b.toml  run.py  template.py
e2e/e2b/app/: requirements.txt
e2e/e2b/dashboard/: ticket.md  valid.yml
e2e/e2b/dashboard/app/: main.py
e2e/e2b/dashboard/app/static/: index.html
e2e/e2b/dashboard/migrations/: 001_schema.sql
e2e/e2b/kanban/: docker-compose.yml
e2e/e2b/kanban/app/: main.py
e2e/e2b/todo/: ticket.md
e2e/e2b/todo/app/: main.py
e2e/e2b/todo/migrations/: 001_initial.sql
e2e/examples/dashboard/: docker-compose.yml
e2e/examples/kanban/: ticket.md
e2e/examples/kanban/app/static/: index.html
e2e/examples/kanban/migrations/: 001_schema.sql
e2e/local/: deploy.py  docker-compose.yml  run.py
src/: report.ts  template.ts
valid/: __init__.py  agent.py  cli.py  loop.py  orchestrator.py  skill.md  tools_server.py
valid-mcp/src/: image.ts  index.ts  renderer.ts  report.ts  template.ts
valid/backends/: cli.py  sdk.py
valid/data/: e2b.Dockerfile  valid-mcp.js
valid/providers/: __init__.py  _daemon.py  _template.py  e2b.py  local.py
