[project]
name = "valid"
version = "0.1.0"
description = "Closed-loop agent validation system"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.52.0",
    "claude-agent-sdk>=0.1.0",
    "e2b-code-interpreter>=1.0.0",
    "mcp>=1.9.0",
    "python-dotenv>=1.0.0",
    "requests>=2.32.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["valid"]
